--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
-logs/
+# logs/
+log_files/
 
 # Unit test / coverage reports
 htmlcov/
